--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "name": "video-dashboard",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "hls.js": "^1.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  }
 }
